# tpaws

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  build.rs  formula_template.rb
.github/workflows/: ci.yaml  release.yaml
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/ai/src/groq/: mod.rs  models.rs
crates/cli/: cli.rs  context.rs  main.rs  telemetry.rs  utils.rs
crates/cli/manifests/: mod.rs  node.rs
crates/cli/subcommands/: mod.rs
crates/cli/subcommands/config/: mod.rs
crates/cli/subcommands/create_pr/: mod.rs
crates/cli/subcommands/pull_request/: create.rs  list.rs  merge.rs  mod.rs  view.rs
crates/cli/subcommands/release/: finish.rs  mod.rs  push.rs  start.rs
crates/cli/subcommands/user_story/: generate_commit.rs  get_branch.rs  get_id.rs  link.rs  mod.rs  view.rs
crates/commands/: Cargo.toml
crates/commands/src/: aws.rs  git.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: file.rs  global_config.rs  lib.rs  project_config.rs  util.rs
crates/global_utils/: Cargo.toml
crates/global_utils/src/: lib.rs
crates/slack/: Cargo.toml
crates/slack/src/: http.rs  lib.rs
crates/slack/src/models/: mod.rs
crates/target_process/: Cargo.toml
crates/target_process/src/: errors.rs  lib.rs
crates/target_process/src/models/: assignable.rs  mod.rs  user.rs
crates/target_process/src/models/assignable/: mod.rs
crates/target_process/src/models/v1/assignable/: assignable.rs  assignables.rs  mod.rs  models.rs
crates/target_process/src/models/v2/assignable/: mod.rs
src/: cli.rs  costants.rs  errors.rs  main.rs
