[package]
name = "create-pr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cpr"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
colored = { version = "2.1.0" }
derive_setters = "0.1.6"
human-panic = "1.2.3"
inquire = "0.6.2"
postage = { version = "0.5.0", features = ["futures"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
spinners = "4.1.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
