[package]
name = "ai"
version = "0.0.1"
edition = "2021"


[dependencies]
global_utils = { path = "../global_utils" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["serde_json", "json"] }
color-eyre = "0.6.2"
