[package]
name = "commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"] }
spinners = "4.1.1"
thiserror = "1.0.58"
cached = { version = "0.49.2", features = ["async", "async_tokio_rt_multi_thread", "serde", "serde_json"] }
