[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"] }
directories = "5.0.1"
chrono = { version = "0.4.35", features = ["serde"] }
sha256 = "1.5.0"
