[package]
name = "target_process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"

chrono = { version = "0.4.34", features = ["serde"] }
derive_setters = "0.1.6"
reqwest = { version = "0.11.24", features = ["serde_json", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"] }
